Fix overflow

--- a/challenge1/style.css
+++ b/challenge1/style.css
@@ -8,6 +8,8 @@
 /* -------------- General Styles -------------- */
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
+    width: 100vw;
 }
 body {
     background-color: #041C32;
